refactor: improve version API